k8s/frontend/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sprintstart-frontend
  namespace: sprintstart
  labels:
    app: sprintstart-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sprintstart-frontend
  template:
    metadata:
      labels:
        app: sprintstart-frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/sprintstartproject/sprintstart-frontend:test
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
      volumes:
        - name: nginx-config
          configMap:
            name: frontend-nginx-config
